# R-Type

./: CMakeLists.txt  CMakePresets.json  README.md  build.bat  build.sh  vcpkg.json
RType/Client/: CMakeLists.txt
RType/Client/include/: App.hpp  Client.hpp  ClientNetworkManager.hpp  InputManager.hpp
RType/Client/include/components/: ActonMappingComponent.hpp
RType/Client/include/systems/: InputActionSystem.hpp  ParalaxResetSystem.hpp
RType/Client/src/: App.cpp  ClientNetworkManager.cpp  InputManager.cpp  MainClient.cpp
RType/Client/src/systems/: InputActionSystem.cpp  ParalaxResetSystem.cpp
RType/CommonLib/: CMakeLists.txt
RType/CommonLib/include/: CollisionSystem.hpp  HitSystem.hpp  gunScript.hpp
RType/CommonLib/include/CommonLib/: CommonLib.hpp  EnemyMovementSystem.hpp  EnemyShootGun.hpp  FactionComponent.hpp  GameStateComponent.hpp  HitboxComponent.hpp  WindowHitboxSystem.hpp  entitycomponents.hpp
RType/CommonLib/include/CommonLib/factory/: EntityFactory.hpp
RType/CommonLib/src/: CollisionSystem.cpp  EnemyMovementSystem.cpp  EnemyShootGun.cpp  HitSystem.cpp  WindowHitboxSystem.cpp
RType/CommonLib/src/factory/: EntityFactory.cpp
RType/CommonLib/src/script/: CommonLib.cpp  gunScript.cpp
RType/GameEngine/: CMakeLists.txt
RType/GameEngine/ecs/include/: Entity.hpp  Entity.inl  Eventbus.hpp  Eventbus.inl  Filter.hpp  Filter.inl  Registry.hpp  Registry.inl  Sparse_array.hpp  Sparse_array.inl  System.hpp  System.inl  System_array.hpp  System_array.inl  ecs.hpp
RType/GameEngine/ecs/src/: Entity.cpp  Filter.cpp  Registry.cpp  System.cpp  System_array.cpp
RType/GameEngine/include/: GameEngine.hpp  UUID.hpp  Window.hpp
RType/GameEngine/include/components/: HealthComponent.hpp  InputComponent.hpp  InputMappingComponent.hpp  component.hpp  components.hpp  graphicsComponents.hpp  networksComponents.hpp  physicsComponents.hpp  typeComponent.hpp  vectors.hpp
RType/GameEngine/include/event/: WindowCloseEvent.hpp  WindowResizeEvent.hpp
RType/GameEngine/include/system/: AudioManager.hpp  AudioSystem.hpp  InputSystem.hpp  MovementSystem.hpp  RendererSystem.hpp
RType/GameEngine/src/: GameEngine.cpp  UUID.cpp  Window.cpp
RType/GameEngine/src/system/: AudioManager.cpp  AudioSystem.cpp  InputSystem.cpp  MovementSystem.cpp  RendererSystem.cpp
RType/Server/: CMakeLists.txt  waveConfig.json
RType/Server/include/: Protocol.hpp  Server.hpp  ServerNetworkManager.hpp
RType/Server/include/systems/: NetworkReceiveSystem.hpp  NetworkSendSystem.hpp  SpawnAsteroidSystem.hpp  SpawnFromConfigSystem.hpp
RType/Server/src/: Main.cpp  ServerNetworkManager.cpp
RType/Server/src/systems/: NetworkReceiveSystem.cpp  NetworkSendSystem.cpp  SpawnAsteroidSystem.cpp  SpawnFromConfigSystem.cpp
doc/: Architecture.md  CMakeLists.txt  Doxyfile  Doxyfile.in  HowToAddDoc.md  README.md  RFC-Protocol.txt  RFC.md  TestsCoverage.md
doc/GameEngine/: Comparative.md  README.md
doc/html/: ActonMappingComponent_8hpp_source.html  App_8cpp_source.html  App_8hpp_source.html  AudioManager_8cpp_source.html  AudioManager_8hpp_source.html  AudioSystem_8cpp_source.html  AudioSystem_8hpp_source.html  ClientLib_8cpp_source.html  ClientLib_8hpp_source.html  ClientNetworkManager_8cpp_source.html  ClientNetworkManager_8hpp_source.html  Client_8hpp_source.html  CollisionSystem_8cpp_source.html  CollisionSystem_8hpp_source.html  CommonLib_8cpp_source.html  CommonLib_8hpp_source.html  EnemyMovementSystem_8cpp_source.html  EnemyMovementSystem_8hpp_source.html  EnemyShootGun_8cpp_source.html  EnemyShootGun_8hpp_source.html  EntityFactory_8cpp_source.html  EntityFactory_8hpp_source.html  Entity_8cpp_source.html  Entity_8hpp_source.html  Eventbus_8hpp_source.html  FactionComponent_8hpp_source.html  Filter_8cpp_source.html  Filter_8hpp_source.html  GameEngine_8cpp_source.html  GameEngine_8hpp_source.html  GameStateComponent_8hpp_source.html  HealthComponent_8hpp_source.html  HitSystem_8cpp_source.html  HitSystem_8hpp_source.html  HitboxComponent_8hpp_source.html  InputActionSystem_8cpp_source.html  InputActionSystem_8hpp_source.html  InputComponent_8hpp_source.html  InputManager_8cpp_source.html  InputManager_8hpp_source.html  (+369 more)
doc/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_19.js  all_1a.js  all_1b.js  all_1c.js  all_1d.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  (+58 more)
tests/: CMakeLists.txt
tests/UnitTests/: Main.cpp
